<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="search_estate">search_estate</string>
    <string name="edit_estate">edit_estate</string>
    <string name="simulateur_pret">simulateur pret</string>
    <string name="settings">settings</string>
    <string name="realestatemanager">RealEstateManager</string>
    <string name="create_new_estate">create new estate</string>
    <string name="list_estate">list estate</string>
    <string name="search_estate_drawer">search estate</string>
    <string name="map_drawer">map</string>
    <string name="type">type:</string>
    <string name="estate_info">Estate info</string>
    <string name="statut">statut</string>
    <string name="surface">surface</string>
    <string name="price">price</string>
    <string name="nb_de_pieces">nb de pieces</string>
    <string name="nb_of_bathroom">nb of bathroom</string>
    <string name="nb_of_bedroom">nb of bedroom</string>
    <string name="description">description</string>
    <string name="date_de_mise_en_vente">date de mise en vente</string>
    <string name="date_de_vente">date de vente</string>
    <string name="agent">agent</string>
    <string name="estate_location">Estate location</string>
    <string name="adresse">adresse</string>
    <string name="city">city</string>
    <string name="point_of_interest">point of interest :</string>
    <string name="cole">école</string>
    <string name="commerce">commerce</string>
    <string name="parc">parc</string>
    <string name="gare">gare</string>
    <string name="add_image">add image</string>
    <string name="camera_image">camera image</string>
    <string name="create_estate">create estate</string>
    <string name="estate_details">Estate details</string>
    <string name="nb_of_room">nb of room:</string>
    <string name="date_of_creation">date of creation:</string>
    <string name="sale_date">sale date:</string>
</resources>
