<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/title_estate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/estate_info"
        android:textColor="#1C0259"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_type_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintWidth_percent=".49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_estate"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:hint="type">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_statut_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintWidth_percent=".49"
        app:layout_constraintStart_toEndOf="@+id/estate_type_layout"
        app:layout_constraintTop_toBottomOf="@id/title_estate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_statut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/statut">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_surface_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent=".49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estate_statut_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/surface">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_price_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent=".49"
        app:layout_constraintStart_toEndOf="@+id/estate_type_layout"
        app:layout_constraintTop_toBottomOf="@id/estate_statut_layout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/price">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_nb_room_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintWidth_percent=".33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estate_surface_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_nb_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/nb_de_pieces">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_nb_bathroom_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintWidth_percent=".33"
        app:layout_constraintStart_toEndOf="@+id/estate_nb_room_layout"
        app:layout_constraintTop_toBottomOf="@id/estate_surface_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_nb_bathroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/nb_of_bathroom">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_nb_bedroom_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintWidth_percent=".33"
        app:layout_constraintStart_toEndOf="@+id/estate_nb_bathroom_layout"
        app:layout_constraintTop_toBottomOf="@id/estate_price_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_nb_bedroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/nb_of_bedroom">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_description_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estate_nb_bathroom_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/description">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout_beginDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent=".48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estate_description_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_de_mise_en_vente" />

    <EditText
        android:id="@+id/create_begin_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:clickable="true"
        android:focusable="true"
        android:inputType="date"
        tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_endDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent=".48"
        app:layout_constraintStart_toEndOf="@id/linearLayout_beginDate"
        app:layout_constraintTop_toBottomOf="@id/estate_description_layout">

    <TextView
        android:id="@+id/endDate_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_de_vente" />

    <EditText
        android:id="@+id/create_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:clickable="false"
        android:focusable="true"
        android:inputType="date"
        tools:ignore="LabelFor" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_agent_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintWidth_percent=".48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_beginDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_agent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/agent">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/title_estate_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/estate_location"
        android:textColor="#1C0259"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estate_agent_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_address_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintWidth_percent=".49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_estate_location">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/estate_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/adresse">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/estate_city_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintWidth_percent=".49"
        app:layout_constraintStart_toEndOf="@id/estate_address_layout"
        app:layout_constraintTop_toBottomOf="@id/title_estate_location">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/estate_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/city">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout

        android:id="@+id/checkbox_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estate_address_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_of_interest"
            android:textColor="@color/design_default_color_on_secondary" />

        <LinearLayout
            android:id="@+id/linearLayout_checkBox1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/estate_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="école"
                android:text="@string/cole" />

            <CheckBox
                android:id="@+id/estate_commerce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="commerce"
                android:text="@string/commerce" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/estate_parc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="parc"
                android:text="@string/parc" />

            <CheckBox
                android:id="@+id/estate_gare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="gare"
                android:text="@string/gare" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_picture_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/add_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_container"/>
    <Button
        android:id="@+id/add_picture_btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/camera_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_picture_btn"/>

    <Button
        android:id="@+id/create_estate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_estate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_picture_btn"
        app:layout_constraintTop_toBottomOf="@id/add_picture_btn_camera"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


